# gitlab-repo-audit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: spec.md
src/gitlab_repo_audit/: cli.py  db.py  index.py  models.py  report.py  retry.py
src/gitlab_repo_audit/templates/: report.html
tests/: test_cli.py  test_db.py  test_index.py  test_report.py
